내 목록 보기 - 필터설정 : 내주변, 최신순

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">찍고</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="menu_items">
+        <item>내 주변</item>
+        <item>최신순</item>
+    </string-array>
+
+
 </resources>
