--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,11 @@
         <item>최신순</item>
     </string-array>
 
+    <string-array name="share_items">
+        <item>내 주변</item>
+        <item>최신순</item>
+        <item>별점순</item>
+
+    </string-array>
 
 </resources>
