--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,9 @@
     </string-array>
 
     <string-array name="share_items">
-        <item>내 주변</item>
         <item>최신순</item>
-        <item>별점순</item>
+        <item>내주변</item>
+        <item>팔로워</item>
 
     </string-array>
 
